# TradingSystemCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Gateway/: BaseGateway.h  IBFIXGateway.cpp  IBFIXGateway.h
src/TUI/: test  test.cpp
src/utils/: Logger.h
